[gd_scene load_steps=11 format=2]

[ext_resource path="res://Weapons/Laser.gd" type="Script" id=1]
[ext_resource path="res://Weapons/glowing_circle.png" type="Texture" id=2]

[sub_resource type="Gradient" id=11]
colors = PoolColorArray( 0.214844, 0.632782, 0.859375, 1, 0.196078, 0.670588, 0.0784314, 1 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.84472, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0.850932, 0.850932, 0.850932, 1, 0.976471, 0.976471, 0.976471, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.576087, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.00340903 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 120.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 250.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )
hue_variation = -0.47
hue_variation_random = 0.35

[sub_resource type="CircleShape2D" id=9]

[node name="LaserBeam2D" type="RayCast2D"]
position = Vector2( 50, 0 )
rotation = 1.5708
cast_to = Vector2( 0, -1 )
collision_mask = 9
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="FillLine2D" type="Line2D" parent="."]
pause_mode = 1
points = PoolVector2Array( 0, 0, -7.62939e-06, 50 )
width = 5.0
default_color = Color( 0.59, 3, 6, 1 )
gradient = SubResource( 11 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles2D" type="Particles2D" parent="."]
emitting = false
lifetime = 0.3
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="CollisionParticles2D" type="Particles2D" parent="."]
scale = Vector2( 1.5, 1.5 )
emitting = false
lifetime = 0.3
process_material = SubResource( 7 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 9 )
